infra/k8s-prod/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls: 
    - hosts: 
        - www.kamaljaya.xyz
      secretName: echo-tls
  rules:
    - host: www.kamaljaya.xyz
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3000
          - path: /api/produk/?(.*)
            pathType: Prefix
            backend:
              service:
                name: produk-service
                port:
                  number: 3000
          - path: /api/pembayaran/?(.*)
            pathType: Prefix
            backend:
              service:
                name: pembayaran-service
                port:
                  number: 3000
          - path: /api/order/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend: 
              service:
                name: client-service
                port: 
                  number: 3000
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    service.beta.kubernetes.io/do-loadbalancer-hostname: "www.kamaljaya.xyz"
  labels:
    helm.sh/chart: ingress-nginx-4.0.15
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 1.2.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
